@@ -34,6 +34,8 @@ PIG-5416: Spark unit tests failing randomly with "java.lang.RuntimeException: Un
 
 PIG-5447: Pig-on-Spark TestSkewedJoin.testSkewedJoinOuter failing with NoSuchElementException (knoguchi)
 
+PIG-5448: All TestHBaseStorage tests failing on pig-on-spark3 (knoguchi)
+
 Release 0.18.0 - Unreleased
  
 INCOMPATIBLE CHANGES
